xee-xpath/tests/snapshots/xpath__range_equal.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"1 to 1\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Long,
                    1,
                ),
            ),
        ),
    },
)
