xee-xpath/tests/snapshots/xpath__round_1_1.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"round(1.1)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Decimal(
                    1,
                ),
            ),
        ),
    },
)
