xee-xpath/tests/snapshots/xpath__run_unary_minus.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"-1\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    -1,
                ),
            ),
        ),
    },
)
