xee-xpath/tests/snapshots/xpath__sequence_predicate_sequence_too_long.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(1, 2, 3)[(2, 3)]\")"
---
Err(
    XPTY0004S {
        src: "(1, 2, 3)[(2, 3)]",
        span: SourceSpan {
            offset: SourceOffset(
                10,
            ),
            length: 6,
        },
    },
)
