xee-xpath/tests/snapshots/xpath__simple_map.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(1, 2) ! (. + 1)\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    Integer(
                        Integer,
                        2,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        3,
                    ),
                ),
            ],
        ),
    },
)
