xee-xpath/tests/snapshots/xpath__simple_map_empty_sequence.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"() ! (. + 1)\")"
---
Ok(
    Sequence {
        stack_value: Empty,
    },
)
