xee-xpath/tests/snapshots/xpath__simple_map_multiple_steps2.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(1, 2) ! (. + 1) ! (. + 2) ! (. + 3)\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    Integer(
                        Integer,
                        7,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        8,
                    ),
                ),
            ],
        ),
    },
)
