xee-xpath/tests/snapshots/xpath__simple_map_position.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(4, 5, 6) ! (fn:position())\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    Integer(
                        Integer,
                        1,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        2,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        3,
                    ),
                ),
            ],
        ),
    },
)
