xee-xpath/tests/snapshots/xpath__simple_map_single.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"1 ! (. , 0)\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    Integer(
                        Integer,
                        1,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        0,
                    ),
                ),
            ],
        ),
    },
)
