xee-xpath/tests/snapshots/xpath__some_quantifier_expr_false.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"some $x in (1, 2, 3) satisfies $x eq 5\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    false,
                ),
            ),
        ),
    },
)
