xee-xpath/tests/snapshots/xpath__square_array.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"['a', 2, 3](1)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "a",
                ),
            ),
        ),
    },
)
